--- a/style.css
+++ b/style.css
@@ -4,3 +4,29 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.container{
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient(135deg,#153677,#4e085f);
+    padding: 8px;
+}
+.todo-app{
+    width: 100%;
+    max-width: 540px;
+    background: #fff;
+    margin: 100px auto 20px;
+    padding: 40px 30px 70px;
+    border-radius: 10px;
+}
+.todo-app h2{
+     
+    color: #153677;
+     display: flex;
+     text-align: center;
+     margin-bottom: 20px;
+    
+}
+.todo-app img{
+    width: 30px;
+    margin-left: 10px;
+}
