--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@
 }
 .todo-app{
     width: 100%;
-    max-width: 540px;
+    max-width: 500px;
     background: #fff;
     margin: 100px auto 20px;
-    padding: 40px 30px 70px;
+    padding: 20px 25px 40px;
     border-radius: 10px;
 }
 .todo-app h2{
@@ -29,4 +29,38 @@
 .todo-app img{
     width: 30px;
     margin-left: 10px;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    background: #edeef0;
+    border-radius: 30px;
+    padding-left: 20px;
+    margin-bottom: 25px;
+}
+input{
+    flex:1;
+    border: none;
+    outline: none;
+    background: transparent;
+    padding:10px;
+    font-weight: 14px;
+}
+button{
+    border: none;
+    outline: none;
+    padding: 16px 50px;
+    background: #ff5945;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 40px;
+}
+ul li{
+    list-style: none;
+    font-size: 17px;
+    padding: 12px 8px 12px 50px;
+    user-select: none;
+    cursor: pointer;
 }
